Fixed relevancy not visible for multiple entity table in its own page

--- a/webapp/components/survey/SurveyForm/nodeDefs/nodeDefs.scss
+++ b/webapp/components/survey/SurveyForm/nodeDefs/nodeDefs.scss
@@ -38,7 +38,11 @@
   display: grid;
   position: relative;
   height: 100%;
+}
 
+// === page / page item - not applicable
+.survey-form__node-def-page,
+.survey-form__node-def-page-item {
   &.not-applicable {
     background-color: rgba($greyBorder, 0.7);
     opacity: 0.6;
